fixed blurred

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,7 @@ body {
     animation-delay: 4s;
   }
 }
+
+.image-wrapper {
+  clip-path: circle(50% at 50%); /* Adjust circle size and position as needed */
+}
